--- a/package.json
+++ b/package.json
@@ -27,5 +27,12 @@
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
+  "staticFiles": {
+        "staticPath": "public",
+        "watcherGlob": "**"
+  },
+   
   "browserslist": "> 0.5%, last 2 versions, not dead"
+  
+  
 }
